- add ingressClassName for k8s >= v1.18

--- a/charts/ocsinventory/templates/ingress.yaml
+++ b/charts/ocsinventory/templates/ingress.yaml
@@ -10,6 +10,9 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
+  {{- if semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion }}
+  ingressClassName: {{ .Values.ingress.ingressClassName }}
+  {{- else }}
   tls:
     - hosts:
       {{- range .Values.ingress.hosts }}
@@ -49,6 +52,9 @@ metadata:
     nginx.ingress.kubernetes.io/auth-secret: {{ template "ocsinventory.fullname" . }}
     nginx.ingress.kubernetes.io/auth-realm: {{ .Values.ingress.basicauth.authRealm | quote }}
 spec:
+  {{- if semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion }}
+  ingressClassName: {{ .Values.ingress.ingressClassName }}
+  {{- else }}
   tls:
     - hosts:
       {{- range .Values.ingress.hosts }}
