--- a/charts/ocsinventory/values.yaml
+++ b/charts/ocsinventory/values.yaml
@@ -78,13 +78,13 @@ mariadb:
 #
 ingress:
   enabled: true
-  ingressClassName: "nginx"
+  # ingressClassName: "nginx" # only for K8S >= v1.18
   labels: {}
   hosts:
     - ""
   tls: true
   annotations:
-    kubernetes.io/ingress.class: nginx
+    # kubernetes.io/ingress.class: nginx # only for K8S < v1.18
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/proxy-body-size: 200M
     nginx.ingress.kubernetes.io/proxy-connect-timeout: 300s
